welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: value update is not a member of Boolean
  while (estSurBiscuit()=false){
         ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (estSurBiscuit()=false){
  ^